RESOLVED FIXED197843
decidePolicyForInstallMissingMediaPluginsPermissionRequest requires GStreamer
https://bugs.webkit.org/show_bug.cgi?id=197843
Summary decidePolicyForInstallMissingMediaPluginsPermissionRequest requires GStreamer
Don Olmstead
Reported 2019-05-13 10:08:02 PDT
The guard in UIProcess/API/wpe/PageClientImpl.cpp is wrong.
Attachments
Patch (1.87 KB, patch)
2019-05-13 10:10 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2019-05-13 10:10:13 PDT
WebKit Commit Bot
Comment 2 2019-05-13 12:09:11 PDT
Comment on attachment 369743 [details] Patch Clearing flags on attachment: 369743 Committed r245243: <https://trac.webkit.org/changeset/245243>
WebKit Commit Bot
Comment 3 2019-05-13 12:09:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.