decidePolicyForInstallMissingMediaPluginsPermissionRequest requires GStreamer https://bugs.webkit.org/show_bug.cgi?id=197843

Reviewed by Alex Christensen.

* UIProcess/API/wpe/PageClientImpl.cpp:
ENABLE(VIDEO) && USE(GSTREAMER)
* UIProcess/WebPageProxy.h:
Cleanup the declaration.


Canonical link: https://commits.webkit.org/211970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245243 268f45cc-cd09-0410-ab3c-d52691b4dbfc